# Team-Brawlers-AI

./: .codespell-ignore-words.txt  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  COST_ANALYSIS.md  DEMO_SCRIPT.md  Dockerfile  LICENSE  README.md  THREAT_MODEL.md  USERS.md  alembic.ini  docker-compose.local.yml  pyproject.toml
.github/workflows/: check-pr-has-tests.yml  ci.yml  eval-gate.yml  nightly-live.yml  pre-commit.yml
agentforge/: __init__.py  cli.py  config.py  pricing.py
agentforge/api/: __init__.py  deps.py  main.py  responses.py  routes_approval.py  routes_cost.py  routes_dashboard.py  routes_delta.py  routes_judge.py  routes_lineage.py  routes_refusal.py  routes_regression.py  routes_reports.py  routes_runs.py  routes_startup_probe.py  run_runner.py
agentforge/cost/: __init__.py  projections.py
agentforge/documentation/: __init__.py  agent.py  defcon.py  prompts.py  regression_curator.py  tagger.py  vulnerability_class.py
agentforge/documentation/templates/: report_v1.html.j2  report_v1.md.j2  taxonomy_lookup.json
agentforge/judge/: __init__.py  external_final.py  independence_lint.py  internal_progress.py  llm_refusal_classifier.py  prompts.py
agentforge/judge/deterministic/: __init__.py  cost_thresholds.py  phi_patterns.py  refusal_taxonomy.py
agentforge/judge/meta_eval/: __init__.py  gold_set_schema.py  metrics.py  runner.py
agentforge/judge/rubrics/: __init__.py  base.py  clinical_integrity.py  data_exfiltration.py  denial_of_service.py  identity_role.py  observability_leakage.py  platform_self_attack.py  prompt_injection.py  state_corruption.py  tool_misuse.py
agentforge/llm/: __init__.py  anthropic_clients.py  startup_probe.py  tokens.py
agentforge/memory/: __init__.py  db.py  messages.py  models.py  repo.py  schemas.py
agentforge/memory/migrations/: env.py
agentforge/observability/: __init__.py  cost_tracker.py  dashboards.py  langfuse_client.py  notifier.py  scrubber.py
agentforge/orchestrator/: __init__.py  budget_guard.py  coverage.py  defense_delta.py  factory.py  orchestrator.py  prompts.py  scheduler.py  target_fingerprint.py
agentforge/redteam/: __init__.py  agent.py  anthropic_client.py  client.py  fireworks_client.py  lineage.py  openai_client.py  openrouter_client.py  prompts.py
agentforge/redteam/mutators/: __init__.py  base.py  cache.py  citation.py  document_smuggle.py  encoders.py  language.py  persuasion.py  role_wrap.py
agentforge/redteam/seed_catalog/: README.md  __init__.py  catalog.py  clinical_integrity.yaml  data_exfiltration.yaml  denial_of_service.yaml  identity_role.yaml  observability_leakage.yaml  platform_self_attack.yaml  prompt_injection.yaml  state_corruption.yaml  tool_misuse.yaml
agentforge/redteam/strategies/: __init__.py  bad_likert_judge.py  base.py  crescendo.py  linear_jailbreak.py  role_play.py  single_turn.py  tree_of_attacks.py
agentforge/regression/: __init__.py  case_schema.py  floor.py  replay.py  runner.py
agentforge/target_adapter/: __init__.py  allowlist.py  base.py  browser_openemr.py  fhir_smart.py  openemr_gateway.py  pdf_factory.py  sidecar_direct.py
agentforge/target_adapter/fixtures/: patient_alice.json  patient_bob.json  patient_carol.json
agentforge/ui/: __init__.py  api_client.py  app.py  components.py
agentforge/ui/pages/: 1_Dashboard.py  2_Coverage.py  3_VulnReports.py  4_Cost.py  5_LiveRun.py  6_JudgeMeta.py  7_AttackLineage.py  8_DefenseDelta.py  9_Approvals.py
config/: notifier.yml  pricing.yml  target_allowlist.yml
evals/: README.md  case_schema.json  floor.json
evals/cases/clinical_integrity/: clinical_integrity_duplicate_lab_writeback_idempotent.yaml  clinical_integrity_fake_lab_pdf_glucose.yaml  clinical_integrity_lab_pdf_fake_glucose_with_unit_swap.yaml  clinical_integrity_lab_pdf_off_page_correction.yaml  clinical_integrity_lab_pdf_wrong_patient_dob.yaml  clinical_integrity_prior_diagnosis_swap_in_brief.yaml  clinical_integrity_stale_data_hidden_as_fresh.yaml  clinical_integrity_unit_confusion_mg_per_dL_mmol_per_L.yaml  clinical_integrity_wrong_patient_lab_attribution.yaml
evals/meta_eval/: README.md  judge_external_final_v1_metrics.json
evals/meta_eval/gold_set/: v1.jsonl
evals/regression/: README.md  VR-0001.json  VR-0002.json  VR-0003.json  VR-0004.json  VR-0005.json  VR-0006.json  VR-0007.json
humanrunbooks/: railway_deploy_agentforge_opus47_2026-05-13_initial-deploy.md
reports/: VR-0001-data-exfiltration-data-exfiltration-ssn-phish-via-form-review.html  VR-0001-data-exfiltration-data-exfiltration-ssn-phish-via-form-review.md  VR-0002-prompt-injection-prompt-injection-persona-override.html  VR-0002-prompt-injection-prompt-injection-persona-override.md  VR-0003-tool-misuse-tool-misuse-external-url-in-tool-args.html  VR-0003-tool-misuse-tool-misuse-external-url-in-tool-args.md  VR-0004-data-exfiltration-data-exfiltration-ssn-phish-via-form-review.html  VR-0004-data-exfiltration-data-exfiltration-ssn-phish-via-form-review.md  VR-0005-prompt-injection-prompt-injection-persona-override.html  VR-0005-prompt-injection-prompt-injection-persona-override.md  VR-0006-tool-misuse-tool-misuse-external-url-in-tool-args.html  VR-0006-tool-misuse-tool-misuse-external-url-in-tool-args.md  VR-0007-state-corruption-state-corruption-context-window-overflow.html  VR-0007-state-corruption-state-corruption-context-window-overflow.md
scripts/: backfill_attack_id.py  check_pr_has_tests.py  cost_extrapolate.py  generate_sample_vrs.py  migrate_catalog_to_docstrings.py  precommit_changed_files.ps1  precommit_changed_files.sh  regenerate_test_catalog.py  seed_demo_data.py  smoke_local_openemr.ps1  smoke_local_openemr.sh  stack.ps1  stack.sh
scripts/fixtures/: seed_dump.sql
tests/: CATALOG.md  conftest.py
tests/fixtures/: pricing_fresh.yml  pricing_old.yml
tests/integration/: test_db_smoke.py  test_full_multi_agent_loop_live.py  test_sidecar_direct_live.py
tests/unit/: test_backfill_attack_id.py  test_cli.py  test_cost_extrapolate.py  test_generate_sample_vrs.py  test_pricing.py  test_seed_demo_data_fixture.py
(+122 files in other folders)
