[tool.poetry]
name = "agentforge"
version = "0.1.0"
description = "Multi-agent adversarial AI security platform for the OpenEMR Clinical Co-Pilot"
authors = ["Roy Harden <royhardenre@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "agentforge" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
pydantic = "^2.9"
pydantic-settings = "^2.6"
sqlalchemy = "^2.0"
alembic = "^1.13"
httpx = "^0.27"
anthropic = "^0.40"
langfuse = "^3.0"
streamlit = "^1.40"
typer = "^0.15"
jinja2 = "^3.1"
pyyaml = "^6.0"
reportlab = "^4.2"
pypdf = "^5.1"
beautifulsoup4 = "^4.12"
loguru = "^0.7"
rich = "^13.9"
apscheduler = "^3.10"
treelib = "^1.7"
tenacity = "^9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
ruff = "^0.7"
mypy = "^1.13"
ipython = "^8.30"
hypothesis = "^6.115"
respx = "^0.21"

[tool.poetry.extras]
browser = ["playwright"]
fireworks = ["fireworks-ai"]

[tool.poetry.group.optional.dependencies]
playwright = { version = "^1.49", optional = true }
fireworks-ai = { version = "^0.16", optional = true }
openai = { version = "^1.54", optional = true }

[tool.poetry.scripts]
tb = "agentforge.cli:app"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast, no I/O",
    "integration: hits SQLite or local HTTP, no LLMs",
    "e2e: end-to-end orchestrated run, may hit LLMs (mocked by default)",
    "eval: uses evals/ fixtures",
    "live: requires deployed target — opt-in only",
]
