[tool.poetry]
name = "agentforge"
version = "0.1.0"
description = "Multi-agent adversarial AI security platform for the OpenEMR Clinical Co-Pilot"
authors = ["Roy Harden <royhardenre@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "agentforge" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
pydantic = "^2.9"
pydantic-settings = "^2.6"
sqlalchemy = "^2.0"
alembic = "^1.13"
httpx = "^0.27"
anthropic = "^0.40"
openai = "^1.54"  # AgDR-0013 - primary Red Team backend (OpenRouter via OpenAI-compatible API)
langfuse = "^3.0"
streamlit = "^1.40"
pandas = ">=2.0"  # Next06 §2: explicit Cost-tab trend chart + breakdown tables. Declared (was transitive via streamlit) so the dep is intentional; loose lower bound avoids forcing a downgrade of what streamlit already pulls.
typer = "^0.15"
jinja2 = "^3.1"
pyyaml = "^6.0"
reportlab = "^4.2"
pypdf = "^5.1"
beautifulsoup4 = "^4.12"
loguru = "^0.7"
rich = "^13.9"
apscheduler = "^3.10"
treelib = "^1.7"
tenacity = "^9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
ruff = "^0.7"
mypy = "^1.13"
ipython = "^8.30"
hypothesis = "^6.115"
respx = "^0.21"
jsonschema = "^4.23"

[tool.poetry.extras]
browser = ["playwright"]
fireworks = ["fireworks-ai"]

[tool.poetry.group.optional.dependencies]
playwright = { version = "^1.49", optional = true }
fireworks-ai = { version = "^0.16", optional = true }
# openai promoted to required deps per AgDR-0013 (primary Red Team backend).

[tool.poetry.scripts]
tb = "agentforge.cli:app"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# E501  : long lines — many master-plan refs and CATALOG descriptions are long.
# RUF001/2/3 : "ambiguous Unicode" rules. This is an ADVERSARIAL AI SECURITY
#              platform where Unicode homographs are part of the attack surface
#              (see tests/unit/observability/test_scrubber.py homograph cases),
#              and the codebase intentionally uses math notation (× ÷ −),
#              Greek letters (α for alpha-thresholds), and en/em dashes in
#              docstrings. Forcing ASCII would defeat both the test data and
#              the prose.
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.lint.flake8-bugbear]
# Calls that are SAFE in argument defaults (B008 won't flag them).
# fastapi.Depends is the canonical FastAPI DI pattern — Depends() MUST sit in
# the default to bind the dependency-injection graph at import time.
# typer.Argument / typer.Option are the same idea for the CLI layer.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Security",
    "typer.Argument",
    "typer.Option",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast, no I/O",
    "integration: hits SQLite or local HTTP, no LLMs",
    "e2e: end-to-end orchestrated run, may hit LLMs (mocked by default)",
    "eval: uses evals/ fixtures",
    "live: requires deployed target — opt-in only",
]

[tool.codespell]
# Skip cached/generated/vendored content + the cloned OpenEMR target.
# Also skip pyproject.toml itself (this section's prose mentions words that
# would self-trigger if scanned).
skip = "*.lock,*.min.js,*.min.css,openemr/*,evals/cache/*,tests/CATALOG.md,scripts/fixtures/*,.git/*,.mypy_cache/*,.ruff_cache/*,.pytest_cache/*,__pycache__/*"
# Domain terms live in a SEPARATE file so codespell doesn't scan its own
# ignore list (the OpenEMR ouroboros trap). Add domain terms there, not here.
ignore-words = ".codespell-ignore-words.txt"
# Confidence threshold; default 2 matches OpenEMR's setting.
quiet-level = 2
